Fixed logging.