@@ -29,16 +29,30 @@ java --illegal-access=warn -jar target/DremioConnectionPoolingExample-1.0-SNAPSH
 If you set the connections to be less than the number of threads, some threads will wait for db connections from the Hikari Pool.  
 For example, if you set `-c 2 -t 7` you might see output like this: 
 ```shell
-2023-01-24 16:57:32.087 [INFO ] [Thread-0] DremioConnectionPoolingExample - Thread-0 -  30000 records 14 records per ms.  pickup_datetime 2013-05-31 18:32:00.0
-2023-01-24 16:57:33.189 [INFO ] [Thread-4] DremioConnectionPoolingExample - Thread-4 -  30000 records 10 records per ms.  pickup_datetime 2014-02-26 23:43:00.0
-2023-01-24 16:57:34.165 [INFO ] [Thread-0] DremioConnectionPoolingExample - Thread-0 -  60000 records 14 records per ms.  pickup_datetime 2014-02-26 23:13:00.0
-2023-01-24 16:57:36.566 [INFO ] [Thread-4] DremioConnectionPoolingExample - Thread-4 -  60000 records 9 records per ms.  pickup_datetime 2014-02-27 04:00:00.0
-2023-01-24 16:57:36.749 [INFO ] [Thread-0] DremioConnectionPoolingExample - Thread-0 -  90000 records 13 records per ms.  pickup_datetime 2014-02-26 20:08:00.0
+2023-01-24 17:07:40.463 [INFO ] [Thread-3] DremioConnectionPoolingExample - 30000 records 40 records per ms.  pickup_datetime 2014-02-26 23:43:00.0
+2023-01-24 17:07:41.891 [INFO ] [Thread-0] DremioConnectionPoolingExample - 30000 records 13 records per ms.  pickup_datetime 2014-08-07 18:47:00.0
+2023-01-24 17:07:43.122 [INFO ] [Thread-3] DremioConnectionPoolingExample - 60000 records 17 records per ms.  pickup_datetime 2013-05-31 08:55:00.0
+2023-01-24 17:07:44.907 [INFO ] [Thread-0] DremioConnectionPoolingExample - 60000 records 11 records per ms.  pickup_datetime 2014-08-07 20:47:00.0
+2023-01-24 17:07:45.660 [INFO ] [Thread-3] DremioConnectionPoolingExample - 90000 records 15 records per ms.  pickup_datetime 2014-02-27 01:24:00.0
+2023-01-24 17:07:48.062 [INFO ] [Thread-0] DremioConnectionPoolingExample - 90000 records 10 records per ms.  pickup_datetime 2013-05-27 20:56:00.0
+2023-01-24 17:07:48.064 [INFO ] [Thread-3] DremioConnectionPoolingExample - 120000 records 14 records per ms.  pickup_datetime 2014-02-27 07:29:00.0
 ```
-In which thread 0 and 4 have the 2 connections, the other 5 threads are waiting. 
+In which thread 0 and 3 are actively using the 2 connections, the other 5 threads are waiting. 
+
+With the default configuration a thread will only wait for 30 seconds, if a connection is not available, the thread will get an SQLException: 
+```shell
+2023-01-24 17:09:10.188 [ERROR] [Thread-1] DremioConnectionPoolingExample - SQLException: HikariPool-1 - Connection is not available, request timed out after 30014ms.
+java.sql.SQLTransientConnectionException: HikariPool-1 - Connection is not available, request timed out after 30014ms.
+	at com.zaxxer.hikari.pool.HikariPool.createTimeoutException(HikariPool.java:696) ~[DremioConnectionPoolingExample-1.0-SNAPSHOT-jar-with-dependencies.jar:?]
+	at com.zaxxer.hikari.pool.HikariPool.getConnection(HikariPool.java:197) ~[DremioConnectionPoolingExample-1.0-SNAPSHOT-jar-with-dependencies.jar:?]
+	at com.zaxxer.hikari.pool.HikariPool.getConnection(HikariPool.java:162) ~[DremioConnectionPoolingExample-1.0-SNAPSHOT-jar-with-dependencies.jar:?]
+	at com.zaxxer.hikari.HikariDataSource.getConnection(HikariDataSource.java:100) ~[DremioConnectionPoolingExample-1.0-SNAPSHOT-jar-with-dependencies.jar:?]
+	at com.dremio.connectionpoolingexample.DremioConnectionPoolingExample$WorkerThread.run(DremioConnectionPoolingExample.java:110) ~[DremioConnectionPoolingExample-1.0-SNAPSHOT-jar-with-dependencies.jar:?]
+```
 
 ## Todo list - 
-- [ ] test with the Arrow-Flight driver, instead of the legacy driver. 
+- [x] test with the Arrow-Flight driver, in addition to the legacy driver. 
 - [ ] better record per second statistics to see how scalable this is. 
-- [ ] add a logger; remove the System.out.println's
+- [x] add a logger; remove the System.out.println's
+- [ ] check into whether using Java 11 will remove the requirement for  `--illegal-access=warn`
 - 
